--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             android:exported="false"
             android:label="@string/title_activity_create_account" />
         <activity android:name=".AuthenticationActivity" />
+        <activity android:name=".FragmentsActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
